# Project-Cyber-Witch-XIII

./: .gitignore  README.md  repos.csv  tree_sizes.csv
mirrors/C__Users_Public_SharedVault_Desktop_wilhelmina-ALL.git/: config
mirrors/C__Users_Public_SharedVault_Desktop_wilhelmina.git/: config  packed-refs
mirrors/C__Users_Public_SharedVault_Users_MW_Desktop_wilhelmina-ALL.git/: HEAD  config
mirrors/C__Users_Public_SharedVault_Users_MW_Desktop_wilhelmina.git/: HEAD  config
mirrors/C__Users_Public_SharedVault_Users_MW_wilhelmina.git/: HEAD  config  packed-refs
mirrors/C__Users_Public_SharedVault__Users_from_backup_20251031_132012_MW_Desktop_wilhelmina-ALL.git/: config  packed-refs
mirrors/C__Users_Public_SharedVault__Users_from_backup_20251031_132012_MW_Desktop_wilhelmina.git/: config
mirrors/C__Users_Public_SharedVault__Users_from_backup_20251031_132012_MW_wilhelmina.git/: config
mirrors/C__Users_Public_SharedVault_wilhelmina.git/: config
trees/C__Users_Public_SharedVault_Desktop_wilhelmina/: Run-Wilhelmina-Ops.cmd
trees/C__Users_Public_SharedVault_Desktop_wilhelmina-ALL/: Fix-Wilhelmina-C6.cmd  apply_wilhelmina_fixpack.ps1  rebase_and_push_c6.ps1
trees/C__Users_Public_SharedVault_Users_MW_Desktop_wilhelmina-ALL/: Run-Wilhelmina-Ops.cmd  bot.py.bak  fix_and_run.ps1  requirements.txt
trees/C__Users_Public_SharedVault__Users_from_backup_20251031_132012_MW_wilhelmina/: .env.example  fix_c6_core.ps1  pyproject.toml
trees/C__Users_Public_SharedVault__Users_from_backup_20251031_132012_MW_wilhelmina/services/: language_engine.py
(+38 files in other folders)
