[project]
name = "wilhelmina"
version = "0.1.0"
requires-python = ">=3.11"

[tool.ruff]
line-length = 100
target-version = "py311"
fix = true
select = ["E","F","I","UP","B"]
ignore = ["E501"]

[tool.pytest.ini_options]
pythonpath = ["."]
addopts = "-q"

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
strict_optional = false
